# django_docker_compose_deploy

./: .gitignore  README.md
1. Django projectni Docker Compose bilan konteynerlash/core/: settings.py
1. Django projectni Docker Compose bilan konteynerlash/source_code/: entrypoint.sh
1. Konteynerlash asoslari/: docker-compose.yml
2. Ko'p muhitli (multi-environment: dev, qa, prod) sozlash/: .env.example  .env.test  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
2. Ko‘p muhitli (multi-environment: dev, qa, prod) sozlash/: Dockerfile  README.md
2. Ko‘p muhitli (multi-environment: dev, qa, prod) sozlash/core/: settings.py
2. Multiple environment/: .env
3. Celery | Asinxron (background) task yaratish/: .env.prod
3. Celery | Asinxron (background) task yaratish/core/: urls.py
3. Celery | Asinxron (background) task yaratish/sales/: urls.py
3. Celeryda asynchronous (asinxron) va background task yaratish/: .env.local  README.md
4. Celery workerni docker compose konteynerga olish/: .env.qa  README.md  docker-compose.yml
4. Celery workerni docker compose konteynerga olish/sales/: models.py
configure_celery/: .env.dev  README.md  pyproject.toml
configure_celery/core/settings/: defaults.py
configure_celery/media/reports/: sales_report_a0b761e4-23e0-40d7-b40d-3d7c8671d375.csv
configure_celery/sales/: utils.py  views.py
configure_celery_rabbitmq/: .env.example  README.md  pyproject.toml
configure_celery_rabbitmq/sales/: tasks.py
containerize_celery_worker/: .env.dev  entrypoint.sh
containerize_celery_worker/core/: celery.py
(+11 files in other folders)
